Add a logger to TourRating

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 #Initialize the importfile name to ExploreCalifornia.json
 #Value can be overridden as runtime program argument java -Dec.importfile=<filename> ....
 spring.jpa.hibernate.ddl-auto=none
+logging.path=logs
+logging.files=${logging.path}/myapp.log
+
+spring.jackson.default-property-inclusion=NON_EMPTY
