Add RatingControllers, tests, and Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ logging.path=logs
 logging.files=${logging.path}/myapp.log
 
 spring.jackson.default-property-inclusion=NON_EMPTY
+
+springdoc.pathsToExclude=/profile/**
