Add security modules and tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ logging.files=${logging.path}/myapp.log
 spring.jackson.default-property-inclusion=NON_EMPTY
 
 springdoc.pathsToExclude=/profile/**
+
+server.port=8088
+
+security.jwt.token.secret-key=secret-key-for-encryption
+security.jwt.token.expiration=600000
+
