Change script db migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ server.port=8088
 security.jwt.token.secret-key=secret-key-for-encryption
 security.jwt.token.expiration=600000
 
+#default -> h2, mysql -> mysql
+spring.profiles.active=default  
+
+spring.datasource.initialization-mode=always
+spring.datasource.continue-on-error=true
