--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,10 @@
 	<description>Explore California Microservice</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>13</java.version>
+		<ec-profile>default</ec-profile>
 	</properties>
 
 	<dependencies>
@@ -111,6 +114,28 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>1.2.2</version>
+				<configuration>
+					<imageName>explorecali-${ec-profile}</imageName>
+					<baseImage>openjdk:18.0.2.1-jdk-oraclelinux7</baseImage>
+					<entryPoint>["java", "-Dspring.profiles.active=${ec-profile}", "-jar", "${project.build.finalName}.jar"]</entryPoint>
+					<resources>
+						<resource>
+							<targetPath>/</targetPath>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}.jar</include>
+						</resource>
+					</resources>
+					<forceTags>true</forceTags>
+					<buildArgs>
+						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
